fix: aligned all footer to the center

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -82,10 +82,17 @@ footer {
 
 /* Small Screens */
 @media only screen and (max-width: 480px) {
+
   .inner-footer {
     flex-direction: column-reverse;
     justify-content: center;
+    align-items: center;
+    text-align: center;
     gap: 50px;
+  }
+  .footer-list li{
+    text-align: center;
+    justify-content: center;
   }
   .logo-socials {
     text-align: center;
